@@ -268,33 +268,28 @@ lvm_trigger()
 # Run this function if USE_ZFS is enabled
 zfs_trigger()
 {
-	pool_name="${root%%/*}"
+	POOL_NAME="${root%%/*}"
 
-	eflag "Importing ${pool_name}..."
+	eflag "Importing ${POOL_NAME}..."
 
-	local CACHE="/etc/zfs/zpool.cache"
+	CACHE="/etc/zfs/zpool.cache"
 
 	if [[ ! -f "${CACHE}" ]]; then
-		eflag "Ignoring cache file and importing your pool ..."
+		ewarn "No cache file exists, importing your pool without it ..."
 
-		zpool import -f -N -o cachefile= ${pool_name} || \
-		die "Failed to import your pool: ${pool_name}"
+		remount_pool
 	elif [[ -f "${CACHE}" ]] && [[ "${refresh}" == "1" ]]; then
-		eflag "Ignoring cache file and importing your pool ..."
+		ewarn "Ignoring cache file and importing your pool ..."
 
-		eflag "Please recreate your initramfs so that " \
+		ewarn "Please recreate your initramfs so that " \
 		      "it can use your new zpool.cache!"
 
-		sleep 1
+		sleep 2
 
 		# Remove the local cache file (Just to make sure; paranoid O_O ...)
-		rm -f ${CACHE}
-
-		zpool import -f -N -o cachefile= ${pool_name} || \
-		die "Failed to import your pool: ${pool_name}"
+		rm -f ${CACHE}; remount_pool
 	else
-		zpool import -c ${CACHE} -N ${pool_name} || \
-		die "Failed to import your pool: ${pool_name}"
+		ewarn "Using zpool.cache ..."
 	fi
 }
 
@@ -307,8 +302,13 @@ mount_root()
 	# options, the variable ends up expanding back to empty quotes and allows
 	# the mount command to keep going. 
 	if [[ ${USE_ZFS} == "1" ]]; then
+		# Try to mount the pool now, if it fails then there might have been
+		# a problem with the cache, so try to remount the pool and then try
+		# again before failing.
 		mount -t zfs -o zfsutil,"${options}" ${root} ${NEW_ROOT} || \
-		die "Failed to import your zfs root dataset!"
+		ewarn "Failed to mount your dataset ... Attempting a remount ..." \
+		remount_pool && mount -t zfs -o zfsutil,"${options}" \
+		${root} ${NEW_ROOT} || die "Failed to import your zfs root dataset!"
 
 		# Installs the cache generated by this initramfs run to the rootfs.
 		# This prevents the main system from becoming out of sync with what
@@ -318,6 +318,15 @@ mount_root()
 		mount -o "${options}" ${root} ${NEW_ROOT} || \
 		die "Failed to import your root device!"
 	fi
+}
+
+# Remounts the pool
+remount_pool()
+{
+	zpool export -f ${POOL_NAME} 2> /dev/null
+
+	zpool import -f -N -o cachefile= ${POOL_NAME} || \
+	die "Failed to import your pool: ${POOL_NAME}"
 }
 
 # Switches into your root device
@@ -349,11 +358,9 @@ check_triggers()
 	fi
 }
 
-# Installs the zpool.cache generated by the initramfs to the rootfs
+# Installs the zpool.cache to the rootfs
 install_cache()
 {
-	local CACHE="/etc/zfs/zpool.cache"
-
 	# If there is an old cache in the rootfs, then delete it.
 	if [[ -f ${NEW_ROOT}/${CACHE} ]]; then
 		rm -f ${NEW_ROOT}/${CACHE}
@@ -372,8 +379,7 @@ single_user()
 	mount --rbind /sys ${NEW_ROOT}/sys
 
 	setsid cttyhack /bin/bash -c "chroot ${NEW_ROOT} /bin/bash -c \
-	'cat /proc/mounts > /etc/mtab && hostname ${RHOSTN}' && \
-	chroot ${NEW_ROOT} /bin/bash -l"
+	'hostname ${RHOSTN}' && chroot ${NEW_ROOT} /bin/bash -l"
 
 	# Lazy unmount these devices from the rootfs since they will be fully 
 	# unmounted from the initramfs environment right after this function
